# mapping_benchmarks

./: .cursorrules  .gitignore  README.md  _fix_62.py  config.py  curate.py  download_papers.py  extract_sections.py  huggingface_education_benchmarks.md  known_benchmarks.py  main.py  mapper.py  parse_papers.py  pyproject.toml  rank_papers.py  report.py  research_categories.py  scraper.py
.claude/: fab_inc_style_guide.md  settings.local.json
website/: README.md  deploy.ps1  package-lock.json  package.json  svelte.config.js
website/src/: app.css  app.html
website/src/lib/: index.ts  types.ts
website/src/lib/components/: BenchmarkRow.svelte  Footer.svelte  FrameworkCard.svelte  Header.svelte  TagBadge.svelte  ToggleSwitch.svelte  YearFilter.svelte
website/src/lib/data/: benchmarks.ts  concerns.ts  framework.ts  research.ts  search.ts  tool-types.ts
website/src/lib/stores/: review.svelte.ts  settings.svelte.ts
website/src/routes/: +layout.svelte  +page.svelte  +page.ts
website/src/routes/benchmark/[slug]/: +page.svelte  +page.ts
website/src/routes/methods/: +page.svelte
website/src/routes/research/: +page.svelte  +page.ts
website/static/research/: 1.md  2.1.md  2.2.md  2.3.md  3.1.md  3.2.md  4.1.md  4.2.md  5.md  6.1.md  6.2.md  manifest.json  uncategorized.md
website/static/research/concern/: cognitive_offloading.md  critical_thinking.md  equity_access.md  manifest.json  metacognition.md  productive_struggle.md
website/static/research/tool-type/: ai_tutor.md  manifest.json  pal.md  teacher_support.md  uncategorized.md
(+10 files in other folders)
